--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: ${name}
 version: ${version}
 author: MineHQ Development Team
-main: net.frozenorb.potpvp.PotPvP
+main: net.frozenorb.potpvp.PotPvPSI
 depend: [ qLib ]
