--- a/pom.xml
+++ b/pom.xml
@@ -47,11 +47,15 @@
             <artifactId>lombok</artifactId>
             <version>1.16.10</version>
         </dependency>
-
         <dependency>
             <groupId>com.sk89q</groupId>
             <artifactId>worldedit</artifactId>
             <version>6.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.comphenix.protocol</groupId>
+            <artifactId>ProtocolLib</artifactId>
+            <version>3.4.0</version>
         </dependency>
     </dependencies>
 </project>
