--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,3 +3,4 @@ version: ${git.commit.id.abbrev}
 author: ${minehq.pluginAuthor}
 main: net.frozenorb.potpvp.PotPvPSI
 depend: [ qLib ]
+softdepend: [ Basic ]
