--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
-name: Practice
+name: ${name}
 version: ${git.commit.id.abbrev}
 author: ${minehq.pluginAuthor}
 main: net.frozenorb.potpvp.PotPvPSI
